# galay-mail

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  galay-mail-config.cmake.in
cmake/: option.cmake
docs/: README.md  release_note.md
docs/plans/: 2026-05-12-galay-mail-design.md  2026-05-12-galay-mail-implementation.md
examples/: CMakeLists.txt
examples/common/: config.h
examples/import/: e1_smtp_send.cc
examples/include/: e1_smtp_send.cc  e2_pop3_retr.cc
galay-mail/: CMakeLists.txt
galay-mail/async/: mail_transport.cc  mail_transport.h  pop3_client.cc  pop3_client.h  smtp_client.cc  smtp_client.h
galay-mail/base/: mail_config.h  mail_error.cc  mail_error.h  mail_url.cc  mail_url.h
galay-mail/module/: galay_mail.cppm  module_prelude.hpp
galay-mail/protocol/: auth.cc  auth.h  pop3_protocol.cc  pop3_protocol.h  smtp_protocol.cc  smtp_protocol.h
test/: CMakeLists.txt  t1_url.cc  t2_auth.cc  t3_smtp_protocol.cc  t4_pop3_protocol.cc  t5_surface.cc
